--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-app",
   "version": "0.1.0",
+  "homepage": "https://mkdevhub.github.io/react-app",
   "private": true,
-  "homepage":"http://mkdevhub.github.io/react-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
