--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-app",
   "version": "0.1.0",
-  "homepage": "https://mkdevhub.github.io/",
+  "homepage": "https://mkdevhub.github.io/react-app/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
